--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My Website
+title: Paco Torrenti's webpage
 
 # Your name to show in the footer
 author: Some Person
@@ -20,11 +20,18 @@ author: Some Person
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  CV: 
+    - General info: "cv_info"
+    - Publications: "cv_research"
+    - List of courses: "cv_teaching"
+
+   Research:
+    - Selected talks: "talks"
+    - CosmoLattice: "cosmolattice"
+    
+   Teaching:
+    - Cosmology course: "cosmo_course"
+
 
 ################
 # --- Logo --- #
