--- a/_config.yml
+++ b/_config.yml
@@ -10,27 +10,28 @@
 ############################
 
 # Name of website
-title: Paco Torrenti's webpage
+title: Paco Torrenti
 
 # Your name to show in the footer
-author: Some Person
+author: Francisco Torrenti
 
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
 navbar-links:
-   CV: 
-    - General info: "cv_info"
-    - Publications: "cv_papers"
-    - List of courses: "cv_teaching"
-
-   Research:
-    - Selected talks: "talks"
-    - CosmoLattice: "cosmolattice"
-    
+   About me: "aboutme"
+   
+   Research: 
+   - Publications: "papers"
+   - Selected talks: "talks"
+   - CosmoLattice: "cosmolattice"
+   
    Teaching:
-    - Cosmology course: "cosmo_course"
+   - List of courses: "courses"
+   - Cosmology course: "cosmo_course"
+   - CosmoLattice school: "cl_school"
+    
 
 
 ################
@@ -39,7 +40,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+avatar: "/assets/img/myphoto.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -56,16 +57,16 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "f.torrenti@uv.es"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+ # facebook: deanattali
+  github: ftorrenti
+ # twitter: daattali
+#  patreon: DeanAttali
+ # youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: daattali
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -78,15 +79,15 @@ social-network-links:
 #  telegram: yourname
 #  calendly: yourname
 #  mastodon: instance.url/@username
-#  ORCID: your ORCID ID
-#  google-scholar: your google scholar
+  ORCID: your ORCID ID
+  google-scholar: your google scholar
 #  discord: invite/invite_code or users/userid 
 #  kaggle: yourname
 #  hackerrank: yourname
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
+rss-description: Personal website of Francisco Torrenti
 
 ###########################
 # --- General options --- #
@@ -94,9 +95,9 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
+  twitter: false
+  facebook: false
+  linkedin: false
   vk: false
 
 # How to display the link to your website in the footer
