--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,14 @@ navbar-links:
    Research: 
    - Publications: "papers"
    - Selected talks: "talks"
-   - CosmoLattice: "cosmolattice"
    
    Teaching:
    - List of courses: "courses"
    - Cosmology course: "cosmo_course"
    - CosmoLattice school: "cl_school"
+   
+   Software:
+   - CosmoLattice: "cosmolattice"
     
 
 
@@ -66,7 +68,7 @@ social-network-links:
  # youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
-  linkedin: daattali
+  linkedin: francisco-torrenti
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -79,8 +81,8 @@ social-network-links:
 #  telegram: yourname
 #  calendly: yourname
 #  mastodon: instance.url/@username
-  ORCID: your ORCID ID
-  google-scholar: your google scholar
+  ORCID: 0000-0003-1883-8365
+  google-scholar: jgCGd2AAAAAJ
 #  discord: invite/invite_code or users/userid 
 #  kaggle: yourname
 #  hackerrank: yourname
