--- a/_config.yml
+++ b/_config.yml
@@ -137,6 +137,16 @@ navbar-var-length: false
 
 #navbar-col: "#EAEAEA"
 #navbar-text-col: "#404040"
+#navbar-border-col: "#DDDDDD"
+#page-col: "#FFFFFF"
+#text-col: "#404040"
+#link-col: "#008AFF"
+#hover-col: "#0085A1"
+#footer-col: "#EAEAEA"
+#footer-text-col: "#777777"
+#footer-link-col: "#404040"
+#footer-hover-col: "#0085A1"
+
 navbar-col: "#000000"
 navbar-text-col: "#ffffff"
 navbar-border-col: "#DDDDDD"
@@ -144,8 +154,8 @@ page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
+footer-col: "#000000"
+footer-text-col: "#ffffff"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
 
