--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
    
    Research: 
    - Research lines: "researchlines"
-   - My publications: "papers"
+   - Publications: "papers"
    - Selected talks: "talks"
    
    Teaching:
