--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Paco Torrenti's website
+title: Paco Torrenti
 
 # Your name to show in the footer
 author: Francisco Torrenti
