--- a/_config.yml
+++ b/_config.yml
@@ -28,13 +28,13 @@ navbar-links:
    - Talks and seminars: "talks"
    
    Teaching:
-   - Courses and students: "courses"
+   - My teaching: "teaching"
    - Theoretical cosmology course: "cosmo_course"
    - CosmoLattice school material: "cl_school"
    
    Software:
    - CosmoLattice: "cosmolattice"
-   - Oscillon profiler: "oscillonprofiler" 
+   - Oscillon profiler: "oscilife" 
     
 
 
