--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ title: Paco Torrenti
 # Your name to show in the footer
 author: Francisco Torrenti
 
+url: http://ftorrenti.github.io
+
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
